--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
           alt=""> Navbar
       </span>
       <span class="navbar-brand ">
-        Hello {{userName}} {{str}}
+        Hello {{user.name + str}}
       </span>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
