--- a/NaproKarta.Client/App/src/app/chart/chart/chart.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart/chart.component.html
@@ -1,16 +1,14 @@
 <div class="card">
   <div class="card-body">
     <div class="row">
-      <h4 class="card-title m-2">Wybrana Karta: {{chartName}}</h4>
+      <h4 class="card-title m-2">Wybrana Karta: {{chartTitle}}</h4>
       <button type="button" class="m-2 btn btn-info">Edytuj Wlaściwości tej karty</button>
       <button type="button" class="m-2 btn btn-danger">Usuń te kartę</button>
     </div>
     <!-- <p class="card-text">Text</p> -->
     <h6 class="card-subtitle mb-2 text-muted">Twoja Notka do tej Karty:</h6>
     <span> {{chartNote}}</span>
-
-
-    
+ 
     <table class="m-2">
       <tr>
         <table>
