--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -19,7 +19,7 @@
       <div *ngIf="isLogged" class=" collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
-          <li class="mr-2 nav-item ">
+          <li *ngIf="chartIdsAndTitles.length>0" class="mr-2 nav-item ">
             <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
@@ -32,7 +32,7 @@
             </div>
           </li>
           <li class="ml-2 nav-item">
-            <button type="button" class="btn btn-secondary">Dodaj nową</button>
+            <button type="button" class="btn btn-secondary">Dodaj nową kartę</button>
           </li>
         </ul>
       </div>
