--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,11 +1,11 @@
 <div class="container ">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top justify-content-between">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top justify-content-between">
     <div class="d-flex justify-content-start">
 
 
       <span class="navbar-brand">
         <img src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top"
-          alt=""> Navbar
+          alt=""> NaproKarta
       </span>
       <span *ngIf="isLogged" class="navbar-brand ">
         {{isLogged ? ('Hello ' + userName) : ''}}
