--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -32,7 +32,7 @@
             </div>
           </li>
           <li class="ml-2 nav-item">
-            <button type="button" class="btn btn-secondary">Dodaj nową kartę</button>
+            <button type="button" class="btn btn-secondary" [routerLink]="[ '/chartAddNew']">Dodaj nową kartę</button>
           </li>
         </ul>
       </div>
