--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -21,7 +21,7 @@
 
           <li *ngIf="chartIdsAndTitles.length>0" class="mr-2 nav-item ">
             <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                <button mat-raised-button color="primary"  class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
                 Wybierz karte </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -31,8 +31,11 @@
               </div>
             </div>
           </li>
-          <li class="ml-2 nav-item">
+          <!-- <li class="ml-2 nav-item">
             <button type="button" class="btn btn-secondary" [routerLink]="[ '/chartAddNew']">Dodaj nową kartę</button>
+          </li> -->
+          <li class="ml-2 nav-item">
+              <button mat-raised-button color="primary" [routerLink]="[ '/chartAddNew']" class="btn btn-md">Dodaj nową kartę</button>
           </li>
         </ul>
       </div>
@@ -41,16 +44,16 @@
     <div class="d-flex justify-content-end">
       <ul class="navbar-nav mr-auto">
         <li *ngIf="isLogged">
-          <a href="http://localhost/NaproKarta/Manage" class="nav-item nav-link">Ustawienia Konta</a>
+          <a href={{applicationUrl + '/Manage'}} class="nav-item nav-link">Ustawienia Konta</a>
         </li>
         <li *ngIf="!isLogged" class="nav-item">
-          <a href="http://localhost/NaproKarta/Account/Register" class="nav-item nav-link">Zarejestruj</a>
+          <a href={{applicationUrl + '/Account/Register'}} class="nav-item nav-link">Zarejestruj</a>
         </li>
         <li *ngIf="!isLogged" class="nav-item">
-          <a href="http://localhost/NaproKarta/Account/Login" class="nav-item nav-link">Zaloguj</a>
+          <a href={{applicationUrl + '/Account/Login'}} class="nav-item nav-link">Zaloguj</a>
         </li>
         <li *ngIf="isLogged" class="nav-item">
-          <a href="http://getbootstrap.com/docs/4.0/components/card/" class="nav-item nav-link">Wyloguj</a>
+          <a href={{applicationUrl + ''}} class="nav-item nav-link">Wyloguj</a>
         </li>
       </ul>
     </div>
