--- a/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/shared/nav-bar/nav-bar.component.html
@@ -44,16 +44,16 @@
     <div class="d-flex justify-content-end">
       <ul class="navbar-nav mr-auto">
         <li *ngIf="isLogged">
-          <a href={{applicationUrl + '/Manage'}} class="nav-item nav-link">Ustawienia Konta</a>
+          <a href="{{applicationUrl + '/Manage'}}" class="nav-item nav-link">Ustawienia Konta</a>
         </li>
         <li *ngIf="!isLogged" class="nav-item">
-          <a href={{applicationUrl + '/Account/Register'}} class="nav-item nav-link">Zarejestruj</a>
+          <a href="{{applicationUrl + '/Account/Register'}}" class="nav-item nav-link">Zarejestruj</a>
         </li>
         <li *ngIf="!isLogged" class="nav-item">
-          <a href={{applicationUrl + '/Account/Login'}} class="nav-item nav-link">Zaloguj</a>
+          <a href="{{applicationUrl + '/Account/Login'}}" class="nav-item nav-link">Zaloguj</a>
         </li>
         <li *ngIf="isLogged" class="nav-item">
-          <a href={{applicationUrl + ''}} class="nav-item nav-link">Wyloguj</a>
+          <a href="{{applicationUrl + ''}}" class="nav-item nav-link">Wyloguj</a>
         </li>
       </ul>
     </div>
