--- a/NaproKarta.Client/App/src/app/app.component.html
+++ b/NaproKarta.Client/App/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav-bar></app-nav-bar>
-<br><br><br>
+<app-nav-bar (chartChanged)='onChartChanged($event)'></app-nav-bar>
+<br>
+<br>
+<br>
 <router-outlet></router-outlet>
-
-
