--- a/NaproKarta.Client/App/src/app/shared/welcome/welcome.component.html
+++ b/NaproKarta.Client/App/src/app/shared/welcome/welcome.component.html
@@ -1,11 +1,11 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Fluid jumbo heading</h1>
+    <h1 class="display-3">Welcome in Naprokarta</h1>
     <p class="lead">Jumbo helper text</p>
-    <hr class="my-2">
+    <!-- <hr class="my-2">
     <p>More info</p>
     <p class="lead">
       <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-    </p>
+    </p> -->
   </div>
 </div>
