--- a/NaproKarta.Client/App/src/styles.css
+++ b/NaproKarta.Client/App/src/styles.css
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+/* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
+/* @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";  */
+@import "~@angular/material/prebuilt-themes/purple-green.css";
+
 /* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
 /* @import "./assets/bootstrap-3.3.7-dist/css/bootstrap.css"; */
 /* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
