--- a/NaproKarta.Client/App/src/app/app.component.html
+++ b/NaproKarta.Client/App/src/app/app.component.html
@@ -1,6 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav-bar (chartChanged)='onChartChanged($event)'></app-nav-bar>
-<br>
-<br>
-<br>
-<router-outlet></router-outlet>
+<div class="app-progress-spinner-overview">
+  <!-- <mat-spinner *ngIf="expression" > </mat-spinner> -->
+
+  <app-nav-bar (chartChanged)='onChartChanged($event)'></app-nav-bar>
+  <br>
+  <br>
+  <br>
+  <router-outlet></router-outlet>
+</div>
