--- a/NaproKarta.Client/App/src/app/shared/welcome/welcome.component.html
+++ b/NaproKarta.Client/App/src/app/shared/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div>
   <div class="container">
     <h1 class="display-3">Welcome in Naprokarta</h1>
     <p class="lead">Jumbo helper text</p>
