--- a/NaproKarta.Client/App/src/app/chart/chart-add/chart-add.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-add/chart-add.component.html
@@ -8,7 +8,8 @@
       <div class="card-body">
         <p class="card-text">
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Nazwa Karty" [(ngModel)]='chartToAdd.title'>
+            <input matInput placeholder="Nazwa Karty" 
+            [(ngModel)]='chartToAdd.title'>
           </mat-form-field>
         </p>
       </div>
@@ -20,18 +21,19 @@
         <p class="card-text">
           <mat-form-field class="example-full-width note">
             <textarea matInput placeholder="Notka do karty" 
-            matTextareaAutosize matAutosizeMinRows="2"
-            matAutosizeMaxRows="50"
-            [(ngModel)]='chartToAdd.note'></textarea>
+            matTextareaAutosize matAutosizeMinRows="2" 
+            matAutosizeMaxRows="50" ></textarea>
           </mat-form-field>
+          <!-- [(ngModel)]='chartToAdd.note'>-->
         </p>
       </div>
     </div>
     <br>
     <div>
-      <button mat-raised-button class="btn ">Anuluj</button>
-      <button mat-raised-button color="primary" class="btn " (click)='AddNewChart()'>Dodaj</button>
+      <button mat-raised-button class="btn" [routerLink]="[ '/welcome']">Anuluj</button>
+      <button mat-raised-button color="primary" class="btn" [routerLink]="[ '/path']" (click)='AddNewChart()'>Dodaj</button>
       <!-- [routerLink]="[ '/chart', id ]"         -->
+      
     </div>
 
     <!-- </form> -->
