--- a/NaproKarta.Client/App/src/styles.css
+++ b/NaproKarta.Client/App/src/styles.css
@@ -7,6 +7,8 @@
 /* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
 /* @import "./assets/bootstrap-3.3.7-dist/css/bootstrap.css"; */
 /* @import "../node_modules/bootstrap/dist/css/bootstrap.min.css"; */
+@import '~https://fonts.googleapis.com/icon?family=Material+Icons';
+
 /*
  .panel {
     margin-bottom: 20px;
