--- a/NaproKarta.Client/App/src/app/chart/chart-modify-dialog/chart-modify-dialog.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-modify-dialog/chart-modify-dialog.component.html
@@ -1,18 +1,17 @@
 <p mat-dialog-title class="mat-typography">
-   Wypelnij dane karty do dodania: 
+  Aktualizuj dane karty:
 </p>
 <mat-dialog-content>
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Nazwa Karty" [(ngModel)]='chartToAdd.title'>
+    <input matInput placeholder="Nazwa Karty" [(ngModel)]='chart.title'>
   </mat-form-field>
   <br>
   <mat-form-field class="example-full-width note">
-    <textarea matInput placeholder="Notka do karty" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="50" [(ngModel)]='chartToAdd.note'></textarea>
+    <textarea matInput placeholder="Notka do karty" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="50" [(ngModel)]='chart.note'></textarea>
   </mat-form-field>
   <br>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close color="primary" class="btn">Anuluj</button>
-  <button mat-raised-button  color="primary" class="btn" (click)='AddChart()'>Dodaj</button>
+  <button mat-raised-button color="primary" class="btn" (click)='ModifyChart()'>Zapisz</button>
 </mat-dialog-actions>
-
