--- a/NaproKarta.Client/App/src/app/observation/observation-edit-dialog/observation-edit-dialog.component.css
+++ b/NaproKarta.Client/App/src/app/observation/observation-edit-dialog/observation-edit-dialog.component.css
@@ -31,12 +31,12 @@ img {
   }
 
   .vertical-radio{
-      width: 200px;
+      width: 16em;      
   }
 
   .radio-element{
-      margin-left: 15px;
-      margin-right: 15px;
+      margin-left: 1.5em;
+      margin-right: 1.5em;
       /* background-color: aqua;
       border: 1px solid darkslategray;
       border-radius: 5px; */
