--- a/NaproKarta.Client/App/src/app/chart/chart-cycle/chart-cycle.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-cycle/chart-cycle.component.html
@@ -1,6 +1,7 @@
 <table>
+  <tr><td>{{note}}</td></tr>
   <tr>
-    <td *ngFor="let item of observations;let i=index">
+        <td *ngFor="let item of observations;let i=index">
       <app-chart-cell [row]='numberInChart' [col]='i'>
       </app-chart-cell>
     </td>
