--- a/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.html
+++ b/NaproKarta.Client/App/src/app/chart/chart-cell/chart-cell.component.html
@@ -19,7 +19,7 @@
       <td>{{observation.numTimes}}</td>
     </tr>
     <tr>
-      <td>{{observation.cipher}}{{observation.cipherCd}}</td>
+      <td>{{observation.cipher}}x{{observation.cipherCd}}</td>
     </tr>
     <tr>
       <td>{{comments}}</td>
