--- a/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
 
       <span class="navbar-brand">
         <img [routerLink]="[ '/welcome']" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" width="30" height="30"
-          class="d-inline-block align-top" alt=""> NaproKarta
+          class="d-inline-block align-top rotating-logo" alt="NaproKarta"> NaproKarta
       </span>
       <a [routerLink]="[ '/settings' ]" class="navbar-brand ">
         {{userName ? ('Hello ' + userName) : ''}}
