--- a/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
+++ b/NaproKarta.Client/App/src/app/my-core/nav-bar/nav-bar.component.html
@@ -26,11 +26,10 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wybierz karte </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a *ngFor="let chartIdAndTitle of chartIdsAndTitles" class="dropdown-item" [id]='chartIdAndTitle.id' 
-                (click)='RefreshChart(chartIdAndTitle.id)'>
-                {{chartIdAndTitle.title}}
-              </a>
-              <!-- [routerLink]="[ '/chart',chartIdAndTitle.id]" -->
+                <a *ngFor="let chartIdAndTitle of chartIdsAndTitles" class="dropdown-item" [id]='chartIdAndTitle.id' (click)='RefreshChart(chartIdAndTitle.id)'>
+                  {{chartIdAndTitle.title}}
+                </a>
+                <!-- [routerLink]="[ '/chart',chartIdAndTitle.id]" -->
               </div>
             </div>
           </li>
